Anpassung an WildFly 16