@@ -1,32 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!--
-  Copyright (c) 2013
-  GEDOPLAN Unternehmensberatung und EDV-Organisation GmbH
-  Stieghorster Str. 60, D-33605 Bielefeld, Germany
-  http://www.gedoplan.de
-  All rights reserved.
--->
+<!-- Copyright (c) 2013 GEDOPLAN Unternehmensberatung und EDV-Organisation GmbH Stieghorster Str. 60, D-33605 Bielefeld, Germany http://www.gedoplan.de All rights reserved. -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
     <groupId>de.gedoplan</groupId>
     <artifactId>build-master</artifactId>
-    <version>7.1.3</version>
+    <version>2018.1.2</version>
   </parent>
 
   <artifactId>feige-sein</artifactId>
-  <version>7.0.0-SNAPSHOT</version>
+  <version>8.0.0-SNAPSHOT</version>
 
   <packaging>war</packaging>
 
   <repositories>
     <repository>
       <id>gedoplanPublic</id>
-      <url>http://svn.involva-gruppe.de/nexus/content/groups/public</url>
+      <url>http://service.gedoplan.de/nexus/content/groups/public</url>
     </repository>
 
     <repository>
@@ -38,7 +33,7 @@
   <pluginRepositories>
     <pluginRepository>
       <id>gedoplanPublic</id>
-      <url>http://svn.involva-gruppe.de/nexus/content/groups/public</url>
+      <url>http://service.gedoplan.de/nexus/content/groups/public</url>
     </pluginRepository>
   </pluginRepositories>
 
@@ -46,27 +41,8 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
 
-<!-- 
-    <arquillian.version>1.1.1.Final</arquillian.version>
-    <arquillian.drone.version>1.2.0.Final</arquillian.drone.version>
-    <arquillian.warp.version>1.0.0.Alpha4</arquillian.warp.version>
-    <deltaspike.version>0.4</deltaspike.version>
-    <h2.version>1.3.171</h2.version>
-    <hibernate.version>4.3.5.Final</hibernate.version>
-    <selenium.version>2.35.0</selenium.version>
-    <weld.version>2.1.0.Final</weld.version>
-    <wildfly.version>8.1.0.Final</wildfly.version>
- -->
-
-    <arquillian.version>1.1.5.Final</arquillian.version>
-    <arquillian.drone.version>1.3.1.Final</arquillian.drone.version>
-    <arquillian.warp.version>1.0.0.Alpha4</arquillian.warp.version>
-    <deltaspike.version>0.4</deltaspike.version>
-    <h2.version>1.3.171</h2.version>
-    <hibernate.version>4.3.5.Final</hibernate.version>
-    <selenium.version>2.43.0</selenium.version>
-    <weld.version>2.1.0.Final</weld.version>
-    <wildfly.version>8.1.0.Final</wildfly.version>
+    <deltaspike.version>1.9.0</deltaspike.version>
+    <wildfly.version>16.0.0.Final</wildfly.version>
 
     <arquillian.container.qualifier>unspecified</arquillian.container.qualifier>
     <arquillian.container.config><![CDATA[
@@ -103,6 +79,14 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-bom</artifactId>
+        <version>2.9.1</version>
+        <scope>import</scope>
+        <type>pom</type>
+      </dependency>
+
+      <dependency>
         <groupId>org.hamcrest</groupId>
         <artifactId>hamcrest-all</artifactId>
         <version>1.3</version>
@@ -111,7 +95,7 @@
       <dependency>
         <groupId>org.jboss.arquillian.selenium</groupId>
         <artifactId>selenium-bom</artifactId>
-        <version>${selenium.version}</version>
+        <version>3.13.0</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -119,7 +103,7 @@
       <dependency>
         <groupId>org.jboss.arquillian</groupId>
         <artifactId>arquillian-bom</artifactId>
-        <version>${arquillian.version}</version>
+        <version>1.4.1.Final</version>
         <scope>import</scope>
         <type>pom</type>
       </dependency>
@@ -127,26 +111,11 @@
       <dependency>
         <groupId>org.jboss.arquillian.extension</groupId>
         <artifactId>arquillian-drone-bom</artifactId>
-        <version>${arquillian.drone.version}</version>
+        <version>2.5.1</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
 
-<!-- 
-      <dependency>
-        <groupId>org.jboss.arquillian.extension</groupId>
-        <artifactId>arquillian-warp-bom</artifactId>
-        <version>${arquillian.warp.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
- -->
-
-      <dependency>
-        <groupId>xml-apis</groupId>
-        <artifactId>xml-apis</artifactId>
-        <version>1.4.01</version>
-      </dependency>
     </dependencies>
   </dependencyManagement>
 
@@ -154,53 +123,72 @@
     <dependency>
       <groupId>javax</groupId>
       <artifactId>javaee-api</artifactId>
-      <version>7.0</version>
+      <version>8.0</version>
       <scope>provided</scope>
     </dependency>
 
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
-      <version>${h2.version}</version>
+      <version>1.4.193</version>
       <scope>test</scope>
     </dependency>
 
     <dependency>
       <groupId>commons-logging</groupId>
       <artifactId>commons-logging</artifactId>
-      <version>1.1.1</version>
+      <version>1.2</version>
     </dependency>
 
     <dependency>
       <groupId>de.gedoplan</groupId>
       <artifactId>baselibs-naming</artifactId>
-      <version>1.0.10</version>
+      <version>1.2</version>
       <scope>test</scope>
     </dependency>
 
     <dependency>
       <groupId>de.gedoplan</groupId>
       <artifactId>baselibs-persistence</artifactId>
-      <version>1.0.15</version>
+      <version>1.6</version>
     </dependency>
 
     <dependency>
       <groupId>de.gedoplan</groupId>
       <artifactId>baselibs-utils</artifactId>
-      <version>1.0.15</version>
+      <version>1.6</version>
     </dependency>
 
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.11</version>
+      <version>4.12</version>
       <scope>test</scope>
     </dependency>
 
     <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-      <version>1.2.16</version>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-jcl</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-jul</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-slf4j-impl</artifactId>
       <scope>test</scope>
     </dependency>
 
@@ -240,7 +228,7 @@
     <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-entitymanager</artifactId>
-      <version>${hibernate.version}</version>
+      <version>5.4.2.Final</version>
       <exclusions>
         <exclusion>
           <groupId>org.hibernate.javax.persistence</groupId>
@@ -256,11 +244,11 @@
       <scope>test</scope>
     </dependency>
 
-    <dependency>
-      <groupId>org.jboss.arquillian.extension</groupId>
-      <artifactId>arquillian-drone-selenium</artifactId>
-      <scope>test</scope>
-    </dependency>
+    <!-- <dependency> -->
+    <!-- <groupId>org.jboss.arquillian.extension</groupId> -->
+    <!-- <artifactId>arquillian-drone-selenium</artifactId> -->
+    <!-- <scope>test</scope> -->
+    <!-- </dependency> -->
 
     <dependency>
       <groupId>org.jboss.arquillian.extension</groupId>
@@ -269,11 +257,11 @@
       <scope>test</scope>
     </dependency>
 
-    <dependency>
-      <groupId>org.jboss.arquillian.extension</groupId>
-      <artifactId>arquillian-drone-selenium-server</artifactId>
-      <scope>test</scope>
-    </dependency>
+<!--     <dependency> -->
+<!--       <groupId>org.jboss.arquillian.extension</groupId> -->
+<!--       <artifactId>arquillian-drone-selenium-server</artifactId> -->
+<!--       <scope>test</scope> -->
+<!--     </dependency> -->
 
     <dependency>
       <groupId>org.jboss.arquillian.junit</groupId>
@@ -287,25 +275,10 @@
       <scope>test</scope>
     </dependency>
 
-<!-- 
-    <dependency>
-      <groupId>org.jboss.arquillian.extension</groupId>
-      <artifactId>arquillian-warp</artifactId>
-      <type>pom</type>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.jboss.arquillian.extension</groupId>
-      <artifactId>arquillian-warp-jsf</artifactId>
-      <scope>test</scope>
-    </dependency>
- -->
-
     <dependency>
       <groupId>org.jboss.resteasy</groupId>
       <artifactId>resteasy-client</artifactId>
-      <version>3.0.4.Final</version>
+      <version>4.0.0.Final</version>
       <scope>test</scope>
     </dependency>
 
@@ -324,7 +297,7 @@
     <dependency>
       <groupId>org.jboss.weld.se</groupId>
       <artifactId>weld-se-core</artifactId>
-      <version>${weld.version}</version>
+      <version>2.1.0.Final</version>
       <scope>test</scope>
     </dependency>
 
@@ -378,22 +351,17 @@
   </build>
 
   <profiles>
-    <!-- 
-    Profil für die Ausführung der Tests mit einem gemanagten WildFly-8.0-Server.
-    Die Server-Software wird bei Bedarf heruntergeladen und in target/wildfly... installiert.
-    Der Server wird für die Tests automatisch gestartet und nachher wieder gestoppt.
-    
-    Achtung: Dieses Profil ist nicht vollständig innerhalb von Eclipse nutzbar, da m2e die Dependency- und Antrun-Plugins nicht unterstützt!
-    Der Download, die Installation und KOnfiguration des Servers muss von der KOmmandozeile aus durchgeführt werden. 
-    -->
+    <!-- Profil für die Ausführung der Tests mit einem gemanagten WildFly-Server. Die Server-Software wird bei Bedarf heruntergeladen und in target/wildfly... installiert. Der Server wird für die Tests
+      automatisch gestartet und nachher wieder gestoppt. Achtung: Dieses Profil ist nicht vollständig innerhalb von Eclipse nutzbar, da m2e die Dependency- und Antrun-Plugins nicht unterstützt! Der Download,
+      die Installation und KOnfiguration des Servers muss von der Kommandozeile aus durchgeführt werden. -->
     <profile>
-      <id>astest_wildfly-8-managed</id>
+      <id>wildfly-managed</id>
 
       <properties>
         <server.type>wildfly</server.type>
         <server.version>${wildfly.version}</server.version>
 
-        <arquillian.container.qualifier>wildfly-8.0-managed</arquillian.container.qualifier>
+        <arquillian.container.qualifier>wildfly-managed</arquillian.container.qualifier>
 
         <skipTests>false</skipTests>
 
@@ -413,7 +381,7 @@
             <configuration>
               <property name="jbossHome">${wildfly.home}</property>
               <property name="serverConfig">standalone-full.xml</property>
-              <property name="javaVmArguments">-Xmx512m -XX:MaxPermSize=128m -Djboss.socket.binding.port-offset=${wildfly.port.offset}</property>
+              <property name="javaVmArguments">-Xmx512m -Djboss.socket.binding.port-offset=${wildfly.port.offset}</property>
               <property name="managementPort">${wildfly.port.management}</property>"
             </configuration>
           </container>
@@ -422,16 +390,16 @@
 
       <dependencies>
         <dependency>
-          <groupId>org.wildfly</groupId>
+          <groupId>org.wildfly.arquillian</groupId>
           <artifactId>wildfly-arquillian-container-managed</artifactId>
-          <version>${server.version}</version>
+          <version>2.2.0.Final</version>
           <scope>test</scope>
         </dependency>
 
         <dependency>
           <groupId>de.gedoplan</groupId>
           <artifactId>baselibs-wildfly</artifactId>
-          <version>8.0.0_01</version>
+          <version>14.0.1_01</version>
           <scope>test</scope>
         </dependency>
       </dependencies>
@@ -492,11 +460,9 @@
       </build>
     </profile>
 
-    <!-- 
-      Profil für Tests mit einem bereits laufenden WildFly 8. Es wird angenommen, dass der Server passend konfiguriert ist. 
-    -->
+    <!-- Profil für Tests mit einem bereits laufenden WildFly. Es wird angenommen, dass der Server passend konfiguriert ist. -->
     <profile>
-      <id>astest_wildfly-8-remote</id>
+      <id>wildfly-remote</id>
 
       <properties>
         <server.type>wildfly</server.type>
@@ -512,39 +478,35 @@
         <server.url.remote>localhost:${wildfly.port.remote}</server.url.remote>
         <server.url.web>http://localhost:${wildfly.port.web}</server.url.web>
 
-        <arquillian.container.qualifier>wildfly-8.0-remote</arquillian.container.qualifier>
+        <arquillian.container.qualifier>wildfly-remote</arquillian.container.qualifier>
 
         <skipTests>false</skipTests>
       </properties>
 
       <dependencies>
         <dependency>
-          <groupId>org.wildfly</groupId>
+          <groupId>org.wildfly.arquillian</groupId>
           <artifactId>wildfly-arquillian-container-remote</artifactId>
-          <version>${server.version}</version>
+          <version>2.2.0.Final</version>
           <scope>test</scope>
         </dependency>
 
         <dependency>
           <groupId>de.gedoplan</groupId>
           <artifactId>baselibs-wildfly</artifactId>
-          <version>8.0.0_01</version>
+          <version>14.0.1_01</version>
           <scope>test</scope>
         </dependency>
       </dependencies>
     </profile>
 
-    <!-- 
-      Die nun folgenden Profile können zur Auswahl des Browsers genutzt werden, der in den Arquillian/Drone/Selenium-Tests verwendet werden soll.
-      Per Default wird HtmlUnit verwendet, d. h. ohne echten Browser (headless) getestet.
-     -->
+    <!-- Die nun folgenden Profile können zur Auswahl des Browsers genutzt werden, der in den Arquillian/Drone/Selenium-Tests verwendet werden soll. Per Default wird HtmlUnit verwendet, d. h. ohne echten
+      Browser (headless) getestet. -->
     <profile>
       <id>astest_browser_firefox</id>
       <properties>
         <arquillian.webdriver.browser>firefox</arquillian.webdriver.browser>
-        <!-- 
-        <selenium.version>2.43.0</selenium.version>
-         -->
+        <!-- <selenium.version>2.43.0</selenium.version> -->
       </properties>
     </profile>
 
@@ -555,10 +517,8 @@
       </properties>
     </profile>
 
-    <!-- 
-      Diese folgenden Profile sind für die Ausführung in Hudson/Jenkins gedacht. Abhängig vom Build Processor können damit Ports
-      in einem (hoffentlich) freien Bereich gewaehlt werden. Im Aufruf muss dazu die Option -Pastest_ports_${EXECUTOR_NUMBER} angegeben werden.  
-    -->
+    <!-- Diese folgenden Profile sind für die Ausführung in Hudson/Jenkins gedacht. Abhängig vom Build Processor können damit Ports in einem (hoffentlich) freien Bereich gewaehlt werden. Im Aufruf muss
+      dazu die Option -Pastest_ports_${EXECUTOR_NUMBER} angegeben werden. -->
     <!-- Profil zur Aktivierung von Nicht-Standard-Ports im Bereich ab 10000 (default). -->
     <profile>
       <id>astest_ports_0</id>
